@@ -2,6 +2,10 @@ package com.softserve.itacademy.controller;
 
 import com.softserve.itacademy.model.Task;
 import com.softserve.itacademy.repository.TaskRepository;
+import jakarta.servlet.RequestDispatcher;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import org.apache.catalina.Globals;
 import org.apache.catalina.LifecycleException;
 import org.apache.catalina.WebResourceRoot;
@@ -9,35 +13,32 @@ import org.apache.catalina.core.StandardContext;
 import org.apache.catalina.startup.Tomcat;
 import org.apache.catalina.webresources.DirResourceSet;
 import org.apache.catalina.webresources.StandardRoot;
-import org.junit.*;
+import org.junit.jupiter.api.*;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.springframework.http.HttpMethod;
 import org.springframework.test.web.reactive.server.WebTestClient;
 
-import javax.servlet.RequestDispatcher;
-import javax.servlet.ServletException;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
 import java.io.File;
 import java.io.IOException;
+import java.util.Collections;
 
-import static org.mockito.ArgumentMatchers.anyInt;
-import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.*;
 
+@TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 public class TasksListServletTest {
+
     private static Tomcat tomcat;
     private static final String WEB_PORT = "8080";
 
-    @BeforeClass
+    @BeforeAll
     public static void startServer() throws ServletException, LifecycleException {
         String webappDirLocation = "src/main/webapp/";
         tomcat = new Tomcat();
 
         String webPort = System.getenv("PORT");
-        if(webPort == null || webPort.isEmpty()) {
+        if (webPort == null || webPort.isEmpty()) {
             webPort = WEB_PORT;
         }
 
@@ -45,7 +46,6 @@ public class TasksListServletTest {
 
         StandardContext ctx = (StandardContext) tomcat.addWebapp("/", new File(webappDirLocation).getAbsolutePath());
         ctx.getServletContext().setAttribute(Globals.ALT_DD_ATTR, webappDirLocation + "WEB-INF/web.xml");
-        System.out.println("configuring app with basedir: " + new File("./" + webappDirLocation).getAbsolutePath());
 
         File additionWebInfClasses = new File("target/classes");
         WebResourceRoot resources = new StandardRoot(ctx);
@@ -56,7 +56,7 @@ public class TasksListServletTest {
         tomcat.start();
     }
 
-    @AfterClass
+    @AfterAll
     public static void stopServer() throws LifecycleException {
         tomcat.stop();
         tomcat.destroy();
@@ -64,25 +64,29 @@ public class TasksListServletTest {
 
     @Mock
     private TaskRepository taskRepository;
+
     @Mock
     private HttpServletRequest request;
+
     @Mock
     private HttpServletResponse response;
+
     @Mock
     private RequestDispatcher requestDispatcher;
 
     @InjectMocks
     private final TasksListServlet tasksListServlet = new TasksListServlet();
 
-    @Before
+    @BeforeEach
     public void initialize() {
         MockitoAnnotations.openMocks(this);
         TaskRepository.getTaskRepository().deleteAll();
     }
 
     @Test
+    @Order(1)
+    @DisplayName("GET /tasks-list should return task list page")
     public void testValidGetRequest() {
-
         byte[] body = WebTestClient.bindToServer()
                 .baseUrl("http://localhost:" + WEB_PORT)
                 .build()
@@ -93,17 +97,21 @@ public class TasksListServletTest {
                 .expectHeader().contentType("text/html;charset=UTF-8")
                 .expectBody().returnResult().getResponseBody();
 
-        assert body != null;
-        Assert.assertTrue(body.length > 0);
+        Assertions.assertNotNull(body, "Response body is null");
+        Assertions.assertTrue(body.length > 0, "Response body is empty");
     }
 
     @Test
+    @Order(2)
+    @DisplayName("Servlet should retrieve tasks list from repository")
     public void testCorrectTasksRead() throws ServletException, IOException {
         when(request.getRequestDispatcher(anyString())).thenReturn(requestDispatcher);
-        when(taskRepository.all()).thenReturn(java.util.List.of());
+        when(taskRepository.all()).thenReturn(Collections.emptyList());
 
         tasksListServlet.doGet(request, response);
 
         verify(taskRepository, times(1)).all();
+        verify(request).getRequestDispatcher("/WEB-INF/pages/tasks-list.jsp");
+        verify(requestDispatcher).forward(request, response);
     }
 }
